Update 404 eror pege

--- a/frontend/src/i18n/locales/ch/translation.json
+++ b/frontend/src/i18n/locales/ch/translation.json
@@ -596,5 +596,44 @@
   "Available Password For Testing": "可用的測試密碼",
   "Card saved successfully!": "卡片保存成功！",
   "Logout Account": "登出帳戶",
-  "SETTINGS": "設置"
+  "SETTINGS": "設置",
+  "Enter current password": "請輸入當前密碼",
+  "Enter new password": "請輸入新密碼",
+  "TOTP verification failed": "TOTP 驗證失敗",
+  "Two-Factor Authentication": "雙重驗證",
+  "Resend Qr": "重新發送 QR 碼",
+  "Request failed. Please try again later.": "請求失敗，請稍後再試。",
+  "An error occurred. Please try again later.": "發生錯誤，請稍後再試。",
+  "Please enter your username.": "請輸入您的使用者名稱。",
+  "Mobile Number": "手機號碼",
+  "Please enter your Mobile Number.": "請輸入您的手機號碼。",
+  "Please enter your email.": "請輸入您的電子郵件。",
+  "Scan this code in your Google Authenticator app.": "請使用 Google Authenticator 掃描此 QR 碼。",
+  "Need help setting up the app? Click here.": "需要協助設定應用程式？點此查看。",
+  "Please enter a valid 6-digit code.": "請輸入有效的 6 位數驗證碼。",
+  "Verify": "驗證",
+  "resend Qr": "重新發送 QR",
+  "Please fill in all fields": "請填寫所有欄位",
+  "First Name": "名字",
+  "Last Name": "姓氏",
+  "Display Name": "顯示名稱",
+  "Search by writer...": "按作者搜尋...",
+  "Story date is required": "故事日期為必填項",
+  "Description is required": "描述為必填項",
+  "Image is required": "圖片為必填項",
+  "Event saved successfully": "事件已成功儲存",
+  "Event created successfully": "事件已成功建立",
+  "Story Date": "故事日期",
+  "Pick Story date": "選擇故事日期",
+  "Event Image": "事件圖片",
+  "Event deleted successfully": "事件已成功刪除",
+  "Back to Dashboard": "返回控制台",
+  "Search Historical Events": "搜尋歷史事件",
+  "Image": "圖片",
+  "Name is required": "名稱為必填項",
+  "Position is required": "職位為必填項",
+  "Job title is required": "職稱為必填項",
+  "Avatar is required": "頭像為必填項",
+  "Member updated successfully": "成員已成功更新",
+  "Member created successfully": "成員已成功建立"
 }
