--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -583,5 +583,213 @@
   "Available username For Testing": "Available username For Testing",
   "Available Password For Testing": "Available Password For Testing",
   "Card saved successfully!": "Card saved successfully!",
-  "SETTINGS": "SETTINGS"
+  "SETTINGS": "SETTINGS",
+  "Enter current password": "Enter current password",
+  "Enter new password": "Enter new password",
+  "TOTP verification failed": "TOTP verification failed",
+  "Two-Factor Authentication": "Two-Factor Authentication",
+  "Resend Qr": "Resend Qr",
+  "Request failed. Please try again later.": "Request failed. Please try again later.",
+  "An error occurred. Please try again later.": "An error occurred. Please try again later.",
+  "Please enter your username.": "Please enter your username.",
+  "Please enter your Mobile Number.": "Please enter your Mobile Number.",
+  "Please enter your email.": "Please enter your email.",
+  "Scan this code in your Google Authenticator app.": "Scan this code in your Google Authenticator app.",
+  "Need help setting up the app? Click here.": "Need help setting up the app? Click here.",
+  "Please enter a valid 6-digit code.": "Please enter a valid 6-digit code.",
+  "Verify": "Verify",
+  "resend Qr": "resend Qr",
+  "Please fill in all fields": "Please fill in all fields",
+  "Search by writer...": "Search by writer...",
+  "Story date is required": "Story date is required",
+  "Description is required": "Description is required",
+  "Image is required": "Image is required",
+  "Event saved successfully": "Event saved successfully",
+  "Event created successfully": "Event created successfully",
+  "Story Date": "Story Date",
+  "Pick Story date": "Pick Story date",
+  "Event Image": "Event Image",
+  "Event deleted successfully": "Event deleted successfully",
+  "Back to Dashboard": "Back to Dashboard",
+  "Search Historical Events": "Search Historical Events",
+  "Image": "Image",
+  "Name is required": "Name is required",
+  "Position is required": "Position is required",
+  "Job title is required": "Job title is required",
+  "Avatar is required": "Avatar is required",
+  "Member updated successfully": "Member updated successfully",
+  "Member created successfully": "Member created successfully",
+  "Enter full name": "Enter full name",
+  "Select Position": "Select Position",
+  "Search positions...": "Search positions...",
+  "No categories found": "No categories found",
+  "Developer, Manager, etc": "Developer, Manager, etc",
+  "Enter a brief description or bio": "Enter a brief description or bio",
+  "platform": "platform",
+  "Member deleted successfully": "Member deleted successfully",
+  "Our Team": "Our Team",
+  "Work Team": "Work Team",
+  "Manage team members and their data": "Manage team members and their data",
+  "members": "members",
+  "Search Team Members": "Search Team Members",
+  "Failed to load positions": "Failed to load positions",
+  "Position updated": "Position updated",
+  "Position created": "Position created",
+  "Operation failed": "Operation failed",
+  "Position deleted": "Position deleted",
+  "Delete failed": "Delete failed",
+  "Positions": "Positions",
+  "Positions Management": "Positions Management",
+  "Manage team positions and roles": "Manage team positions and roles",
+  "positions": "positions",
+  "Add Position": "Add Position",
+  "Search Positions": "Search Positions",
+  "No positions found": "No positions found",
+  "Edit Position": "Edit Position",
+  "Delete Position": "Delete Position",
+  "Are you sure you want to delete this position? This action cannot be undone.": "Are you sure you want to delete this position? This action cannot be undone.",
+  "Card deleted successfully": "Card deleted successfully",
+  "Select a theme": "Select a theme",
+  "Select a language": "Select a language",
+  "Select a Type": "Select a Type",
+  "Max size: 5MB. Supported formats: JPG, PNG, GIF, WebP": "Max size: 5MB. Supported formats: JPG, PNG, GIF, WebP",
+  "Optional": "Optional",
+  "Please select a valid image file": "Please select a valid image file",
+  "Report type is required": "Report type is required",
+  "Country is required": "Country is required",
+  "Happened At is required": "Happened At is required",
+  "Section is required": "Section is required",
+  "Summary is required": "Summary is required",
+  "Event updated successfully": "Event updated successfully",
+  "Back to Events List": "Back to Events List",
+  "Edit Event": "Edit Event",
+  "Create New Event": "Create New Event",
+  "Search categories...": "Search categories...",
+  "Search writers...": "Search writers...",
+  "No writers found": "No writers found",
+  "Enter report title": "Enter report title",
+  "Report Type": "Report Type",
+  "Video": "Video",
+  "Section": "Section",
+  "Select Section": "Select Section",
+  "Search sections...": "Search sections...",
+  "No sections found": "No sections found",
+  "Duration (Minutes)": "Duration (Minutes)",
+  "Enter duration in minutes": "Enter duration in minutes",
+  "Happened At": "Happened At",
+  "Summary": "Summary",
+  "Enter report summary": "Enter report summary",
+  "Failed to load categories": "Failed to load categories",
+  "Category updated": "Category updated",
+  "Category created": "Category created",
+  "Category deleted": "Category deleted",
+  "Go to Events List": "Go to Events List",
+  "Events Categories": "Events Categories",
+  "Manage events categories and classifications": "Manage events categories and classifications",
+  "categories": "categories",
+  "Add Category": "Add Category",
+  "Search Categories": "Search Categories",
+  "Edit Category": "Edit Category",
+  "Delete Category": "Delete Category",
+  "Are you sure you want to delete this category? This action cannot be undone.": "Are you sure you want to delete this category? This action cannot be undone.",
+  "Events": "Events",
+  "Search Events...": "Search Events...",
+  "Loading Event...": "Loading Event...",
+  "No Event found matching your search.": "No Event found matching your search.",
+  "No Event available.": "No Event available.",
+  "Failed to load sections": "Failed to load sections",
+  "Section updated": "Section updated",
+  "Section created": "Section created",
+  "Section deleted": "Section deleted",
+  "Events Sections": "Events Sections",
+  "Manage events sections and classifications": "Manage events sections and classifications",
+  "sections": "sections",
+  "Add Section": "Add Section",
+  "Search Sections": "Search Sections",
+  "Edit Section": "Edit Section",
+  "Delete Section": "Delete Section",
+  "Are you sure you want to delete this section? This action cannot be undone.": "Are you sure you want to delete this section? This action cannot be undone.",
+  "Body content is required": "Body content is required",
+  "Status is required": "Status is required",
+  "Read time is required": "Read time is required",
+  "Tags are required": "Tags are required",
+  "Please fix the errors in the form": "Please fix the errors in the form",
+  "Back to Posts List": "Back to Posts List",
+  "Post Image": "Post Image",
+  "Select Status": "Select Status",
+  "Enter Read Time in minutes": "Enter Read Time in minutes",
+  "Camera Model": "Camera Model",
+  "Enter camera model": "Enter camera model",
+  "Camera Man": "Camera Man",
+  "Body Content": "Body Content",
+  "Enter the full content of the post": "Enter the full content of the post",
+  "This is the main content that will be displayed to readers": "This is the main content that will be displayed to readers",
+  "Enter metadata (JSON format)": "Enter metadata (JSON format)",
+  "Optional metadata in JSON format": "Optional metadata in JSON format",
+  "Go to Posts List": "Go to Posts List",
+  "Posts Categories": "Posts Categories",
+  "Manage posts categories and classifications": "Manage posts categories and classifications",
+  "Not published yet": "Not published yet",
+  "Draft": "Draft",
+  "Archived": "Archived",
+  "Unknown Writer": "Unknown Writer",
+  "Content Preview": "Content Preview",
+  "Post Statistics": "Post Statistics",
+  "Yes": "Yes",
+  "No": "No",
+  "Post Information": "Post Information",
+  "Uncategorized": "Uncategorized",
+  "Unknown": "Unknown",
+  "Content Length": "Content Length",
+  "characters": "characters",
+  "No content": "No content",
+  "Air date is required": "Air date is required",
+  "TV Program updated successfully": "TV Program updated successfully",
+  "TV Program created successfully": "TV Program created successfully",
+  "Back to Video List": "Back to Video List",
+  "Edit News": "Edit News",
+  "Create New News": "Create New News",
+  "Air Date": "Air Date",
+  "Live Program": "Live Program",
+  "Go to News List": "Go to News List",
+  "News Categories": "News Categories",
+  "Manage news categories and classifications": "Manage news categories and classifications",
+  "Thumbnail is required": "Thumbnail is required",
+  "Season is required": "Season is required",
+  "Cast is required": "Cast is required",
+  "Season": "Season",
+  "Enter season number or name": "Enter season number or name",
+  "Casts": "Casts",
+  "Type a cast member name and press Enter": "Type a cast member name and press Enter",
+  "Enter video description": "Enter video description",
+  "Video Information": "Video Information",
+  "Video Type": "Video Type",
+  "Type & Links": "Type & Links",
+  "Standard Video": "Standard Video",
+  "Watch Video": "Watch Video",
+  "Go to Videos List": "Go to Videos List",
+  "Videos Categories": "Videos Categories",
+  "Manage videos categories and classifications": "Manage videos categories and classifications",
+  "views": "views",
+  "Normal": "Normal",
+  "Search by Writer...": "Search by Writer...",
+  "Publications": "Publications",
+  "Following": "Following",
+  "About me": "About me",
+  "Tell us about yourself...": "Tell us about yourself...",
+  "Full Name": "Full Name",
+  "Phone": "Phone",
+  "Website": "Website",
+  "example: https://yourwebsite.com": "example: https://yourwebsite.com",
+  "Address": "Address",
+  "You have unsaved changes. Click 'Update Profile' to save them.": "You have unsaved changes. Click 'Update Profile' to save them.",
+  "Updated Profile Successfully": "Updated Profile Successfully",
+  "Pick created date": "Pick created date",
+  "Index Category": "Index Category",
+  "This Index Category": "This Index Category",
+  "writer": "writer",
+  "Load more": "Load more",
+  "Ooops...": "Ooops...",
+  "Sorry, the content you're looking for doesn't exist.": "Sorry, the content you're looking for doesn't exist.",
+  "Either it was removed, or you mistyped the link.": "Either it was removed, or you mistyped the link."
 }
