--- a/frontend/src/i18n/locales/jp/translation.json
+++ b/frontend/src/i18n/locales/jp/translation.json
@@ -524,5 +524,245 @@
   "Available Password For Testing": "テスト用に利用可能なパスワード",
   "Card saved successfully!": "カードが正常に保存されました！",
   "Logout Account": "アカウントからログアウト",
-  "SETTINGS": "設定"
+  "SETTINGS": "設定",
+  "Enter current password": "現在のパスワードを入力",
+  "Enter new password": "新しいパスワードを入力",
+  "TOTP verification failed": "TOTP認証に失敗しました",
+  "Two-Factor Authentication": "二要素認証",
+  "Resend Qr": "QRコードを再送信",
+  "Request failed. Please try again later.": "リクエストに失敗しました。後でもう一度お試しください。",
+  "An error occurred. Please try again later.": "エラーが発生しました。後でもう一度お試しください。",
+  "Please enter your username.": "ユーザー名を入力してください。",
+  "Mobile Number": "携帯電話番号",
+  "Please enter your Mobile Number.": "携帯電話番号を入力してください。",
+  "Please enter your email.": "メールアドレスを入力してください。",
+  "Scan this code in your Google Authenticator app.": "このコードをGoogle Authenticatorアプリでスキャンしてください。",
+  "Need help setting up the app? Click here.": "アプリの設定でお困りですか？こちらをクリック。",
+  "Please enter a valid 6-digit code.": "有効な6桁のコードを入力してください。",
+  "Verify": "認証",
+  "resend Qr": "QRコードを再送信",
+  "Please fill in all fields": "すべてのフィールドを入力してください。",
+  "First Name": "名",
+  "Last Name": "姓",
+  "Display Name": "表示名",
+  "Search by writer...": "ライターで検索...",
+  "Story date is required": "ストーリーの日付は必須です。",
+  "Description is required": "説明は必須です。",
+  "Image is required": "画像は必須です。",
+  "Event saved successfully": "イベントは正常に保存されました。",
+  "Event created successfully": "イベントは正常に作成されました。",
+  "Story Date": "ストーリーの日付",
+  "Pick Story date": "ストーリーの日付を選択",
+  "Event Image": "イベント画像",
+  "Event deleted successfully": "イベントは正常に削除されました。",
+  "Back to Dashboard": "ダッシュボードに戻る",
+  "Search Historical Events": "歴史的イベントを検索",
+  "Image": "画像",
+  "Name is required": "名前は必須です。",
+  "Position is required": "役職は必須です。",
+  "Job title is required": "職名は必須です。",
+  "Avatar is required": "アバターは必須です。",
+  "Member updated successfully": "メンバーは正常に更新されました。",
+  "Member created successfully": "メンバーは正常に作成されました。",
+  "Name": "名前",
+  "Enter full name": "フルネームを入力",
+  "Select Position": "役職を選択",
+  "Search positions...": "役職を検索...",
+  "No categories found": "カテゴリが見つかりません。",
+  "Job Title": "職名",
+  "Developer, Manager, etc": "開発者、マネージャーなど",
+  "Enter a brief description or bio": "簡単な説明または経歴を入力",
+  "Avatar": "アバター",
+  "Enter image URL as alternative to file upload": "ファイルアップロードの代わりに画像URLを入力",
+  "platform": "プラットフォーム",
+  "Member deleted successfully": "メンバーは正常に削除されました。",
+  "Work Team": "ワークチーム",
+  "Manage team members and their data": "チームメンバーとそのデータを管理",
+  "members": "メンバー",
+  "Search Team Members": "チームメンバーを検索",
+  "Failed to load positions": "役職の読み込みに失敗しました。",
+  "Position updated": "役職が更新されました。",
+  "Position created": "役職が作成されました。",
+  "Operation failed": "操作に失敗しました。",
+  "Position deleted": "役職が削除されました。",
+  "Delete failed": "削除に失敗しました。",
+  "Positions": "役職",
+  "Positions Management": "役職管理",
+  "Manage team positions and roles": "チームの役職と役割を管理",
+  "positions": "役職",
+  "Add Position": "役職を追加",
+  "Search Positions": "役職を検索",
+  "No positions found": "役職が見つかりません。",
+  "Edit Position": "役職を編集",
+  "Delete Position": "役職を削除",
+  "Are you sure you want to delete this position? This action cannot be undone.": "この役職を削除してもよろしいですか？この操作は元に戻せません。",
+  "Card deleted successfully": "カードは正常に削除されました。",
+  "Card updated successfully": "カードは正常に更新されました。",
+  "Card created successfully": "カードは正常に作成されました。",
+  "Select a theme": "テーマを選択",
+  "Select a language": "言語を選択",
+  "Kind": "種類",
+  "Select a Type": "タイプを選択",
+  "Max size: 5MB. Supported formats: JPG, PNG, GIF, WebP": "最大サイズ: 5MB。サポート形式: JPG, PNG, GIF, WebP",
+  "Main Image URL": "メイン画像URL",
+  "Alternative to file upload": "ファイルアップロードの代替",
+  "Cover Image URL": "カバー画像URL",
+  "Enter cover image URL as alternative to file upload": "ファイルアップロードの代わりにカバー画像URLを入力",
+  "Optional": "任意",
+  "Additional metadata in JSON format (optional)": "追加メタデータ (JSON形式、任意)",
+  "Example: {\"tags\": [\"featured\", \"popular\"], \"priority\": 1}": "例: {\"tags\": [\"featured\", \"popular\"], \"priority\": 1}",
+  "Please select a valid image file": "有効な画像ファイルを選択してください。",
+  "Report type is required": "レポートタイプは必須です。",
+  "Country is required": "国は必須です。",
+  "Happened At is required": "発生日時は必須です。",
+  "Section is required": "セクションは必須です。",
+  "Summary is required": "概要は必須です。",
+  "Event updated successfully": "イベントは正常に更新されました。",
+  "Back to Events List": "イベント一覧に戻る",
+  "Edit Event": "イベントを編集",
+  "Create New Event": "新規イベントを作成",
+  "You can either upload a file above or provide a URL here": "上記のファイルアップロードまたはURLの入力が可能です",
+  "Search categories...": "カテゴリを検索...",
+  "Search writers...": "ライターを検索...",
+  "No writers found": "ライターが見つかりません。",
+  "Enter report title": "レポートタイトルを入力",
+  "Report Type": "レポートタイプ",
+  "Video": "動画",
+  "Section": "セクション",
+  "Select Section": "セクションを選択",
+  "Search sections...": "セクションを検索...",
+  "No sections found": "セクションが見つかりません。",
+  "Select Country": "国を選択",
+  "Duration (Minutes)": "時間 (分)",
+  "Enter duration in minutes": "時間（分）を入力",
+  "Happened At": "発生日時",
+  "Summary": "概要",
+  "Enter report summary": "レポートの概要を入力",
+  "Failed to load categories": "カテゴリの読み込みに失敗しました。",
+  "Category updated": "カテゴリが更新されました。",
+  "Category created": "カテゴリが作成されました。",
+  "Category deleted": "カテゴリが削除されました。",
+  "Go to Events List": "イベント一覧へ",
+  "Events Categories": "イベントカテゴリ",
+  "Manage events categories and classifications": "イベントカテゴリと分類を管理",
+  "categories": "カテゴリ",
+  "Add Category": "カテゴリを追加",
+  "Search Categories": "カテゴリを検索",
+  "Edit Category": "カテゴリを編集",
+  "Delete Category": "カテゴリを削除",
+  "Are you sure you want to delete this category? This action cannot be undone.": "このカテゴリを削除してもよろしいですか？この操作は元に戻せません。",
+  "Events": "イベント",
+  "Search Events...": "イベントを検索...",
+  "Loading Event...": "イベントを読み込み中...",
+  "No Event found matching your search.": "検索に一致するイベントが見つかりません。",
+  "No Event available.": "利用可能なイベントがありません。",
+  "Failed to load sections": "セクションの読み込みに失敗しました。",
+  "Section updated": "セクションが更新されました。",
+  "Section created": "セクションが作成されました。",
+  "Section deleted": "セクションが削除されました。",
+  "Events Sections": "イベントセクション",
+  "Manage events sections and classifications": "イベントセクションと分類を管理",
+  "sections": "セクション",
+  "Add Section": "セクションを追加",
+  "Search Sections": "セクションを検索",
+  "Edit Section": "セクションを編集",
+  "Delete Section": "セクションを削除",
+  "Are you sure you want to delete this section? This action cannot be undone.": "このセクションを削除してもよろしいですか？この操作は元に戻せません。",
+  "Body content is required": "本文の内容は必須です。",
+  "Status is required": "ステータスは必須です。",
+  "Read time is required": "読了時間は必須です。",
+  "Tags are required": "タグは必須です。",
+  "Please fix the errors in the form": "フォームのエラーを修正してください。",
+  "Back to Posts List": "投稿一覧に戻る",
+  "Post Image": "投稿画像",
+  "Select Status": "ステータスを選択",
+  "Enter Read Time in minutes": "読了時間（分）を入力",
+  "Camera Model": "カメラモデル",
+  "Enter camera model": "カメラモデルを入力",
+  "Camera Man": "カメラマン",
+  "Body Content": "本文",
+  "Enter the full content of the post": "投稿の全文を入力",
+  "This is the main content that will be displayed to readers": "これは読者に表示されるメインのコンテンツです",
+  "Enter metadata (JSON format)": "メタデータを入力 (JSON形式)",
+  "Optional metadata in JSON format": "任意のメタデータ (JSON形式)",
+  "Go to Posts List": "投稿一覧へ",
+  "Posts Categories": "投稿カテゴリ",
+  "Manage posts categories and classifications": "投稿カテゴリと分類を管理",
+  "Search posts...": "投稿を検索...",
+  "No posts found matching your search": "検索に一致する投稿が見つかりません。",
+  "No posts available": "利用可能な投稿がありません。",
+  "Not published yet": "まだ公開されていません",
+  "Draft": "下書き",
+  "Archived": "アーカイブ済み",
+  "Unknown Writer": "不明なライター",
+  "Content Preview": "コンテンツプレビュー",
+  "Post Statistics": "投稿統計",
+  "Yes": "はい",
+  "No": "いいえ",
+  "Post Information": "投稿情報",
+  "Uncategorized": "未分類",
+  "Unknown": "不明",
+  "Content Length": "コンテンツの長さ",
+  "characters": "文字",
+  "No content": "コンテンツがありません",
+  "Air date is required": "放送日は必須です。",
+  "TV Program updated successfully": "テレビ番組は正常に更新されました。",
+  "TV Program created successfully": "テレビ番組は正常に作成されました。",
+  "Back to Video List": "動画一覧に戻る",
+  "Edit News": "ニュースを編集",
+  "Create New News": "新規ニュースを作成",
+  "Air Date": "放送日",
+  "Live Program": "ライブ番組",
+  "Go to News List": "ニュース一覧へ",
+  "News Categories": "ニュースカテゴリ",
+  "Manage news categories and classifications": "ニュースカテゴリと分類を管理",
+  "Thumbnail is required": "サムネイルは必須です。",
+  "Season is required": "シーズンは必須です。",
+  "Cast is required": "キャストは必須です。",
+  "Back to Videos List": "動画一覧に戻る",
+  "Thumbnail URL": "サムネイルURL",
+  "Enter thumbnail URL as alternative to file upload": "ファイルアップロードの代わりにサムネイルURLを入力",
+  "Season": "シーズン",
+  "Enter season number or name": "シーズン番号または名前を入力",
+  "Casts": "キャスト",
+  "Type a cast member name and press Enter": "キャスト名を入力してEnterキーを押してください",
+  "Enter video description": "動画の説明を入力",
+  "Video Information": "動画情報",
+  "Video Type": "動画タイプ",
+  "Published Date": "公開日",
+  "Type & Links": "タイプとリンク",
+  "Standard Video": "標準動画",
+  "Watch Video": "動画を視聴",
+  "Go to Videos List": "動画一覧へ",
+  "Videos Categories": "動画カテゴリ",
+  "Manage videos categories and classifications": "動画カテゴリと分類を管理",
+  "Reference Code": "参照コード",
+  "views": "視聴回数",
+  "Normal": "通常",
+  "Search by Writer...": "ライターで検索...",
+  "Profile updated successfully": "プロフィールは正常に更新されました。",
+  "Publications": "公開",
+  "Following": "フォロー中",
+  "About me": "自己紹介",
+  "Tell us about yourself...": "あなた自身について教えてください...",
+  "Full Name": "フルネーム",
+  "Phone": "電話番号",
+  "Website": "ウェブサイト",
+  "example: https://yourwebsite.com": "例: https://yourwebsite.com",
+  "Address": "住所",
+  "You have unsaved changes. Click 'Update Profile' to save them.": "未保存の変更があります。「プロフィールを更新」をクリックして保存してください。",
+  "Confirm password is required": "パスワード（確認用）は必須です。",
+  "Updated Profile Successfully": "プロフィールは正常に更新されました。",
+  "Profession": "職業",
+  "Address Details": "住所詳細",
+  "Pick created date": "作成日を選択",
+  "Index Category": "インデックスカテゴリ",
+  "This Index Category": "このインデックスカテゴリ",
+  "writer": "ライター",
+  "Card": "カード",
+  "Photo": "写真",
+  "Load more": "もっと読み込む",
+  "Ooops...": "おっと...",
+  "Sorry, the content you're looking for doesn't exist.": "申し訳ありませんが、お探しのコンテンツは存在しません。",
+  "Either it was removed, or you mistyped the link.": "削除されたか、リンクを間違って入力した可能性があります。"
 }
