--- a/frontend/src/i18n/locales/tr/translation.json
+++ b/frontend/src/i18n/locales/tr/translation.json
@@ -570,5 +570,244 @@
   "Available Password For Testing": "Test İçin Kullanılabilir Şifre",
   "Card saved successfully!": "Kart başarıyla kaydedildi!",
   "Logout Account": "Hesaptan Çıkış Yap",
-  "SETTINGS": "Ayarlar"
+  "SETTINGS": "Ayarlar",
+  "Enter current password": "أدخل كلمة المرور الحالية",
+  "Enter new password": "أدخل كلمة مرور جديدة",
+  "TOTP verification failed": "فشل التحقق من TOTP",
+  "Two-Factor Authentication": "المصادقة الثنائية",
+  "Resend Qr": "إعادة إرسال Qr",
+  "Request failed. Please try again later.": "فشل الطلب. يرجى المحاولة مرة أخرى لاحقًا.",
+  "An error occurred. Please try again later.": "حدث خطأ. يرجى المحاولة مرة أخرى لاحقًا.",
+  "Please enter your username.": "الرجاء إدخال اسم المستخدم الخاص بك.",
+  "Mobile Number": "رقم الجوال",
+  "Please enter your Mobile Number.": "الرجاء إدخال رقم الجوال الخاص بك.",
+  "Please enter your email.": "الرجاء إدخال بريدك الإلكتروني.",
+  "Scan this code in your Google Authenticator app.": "امسح هذا الرمز في تطبيق Google Authenticator الخاص بك.",
+  "Need help setting up the app? Click here.": "هل تحتاج إلى مساعدة في إعداد التطبيق؟ انقر هنا.",
+  "Please enter a valid 6-digit code.": "الرجاء إدخال رمز صالح مكون من 6 أرقام.",
+  "Verify": "تحقق",
+  "resend Qr": "إعادة إرسال Qr",
+  "Please fill in all fields": "يرجى ملء جميع الحقول",
+  "First Name": "الاسم الأول",
+  "Last Name": "الاسم الأخير",
+  "Display Name": "الاسم المعروض",
+  "Search by writer...": "ابحث بالكاتب...",
+  "Story date is required": "تاريخ القصة مطلوب",
+  "Description is required": "الوصف مطلوب",
+  "Image is required": "الصورة مطلوبة",
+  "Event saved successfully": "تم حفظ الحدث بنجاح",
+  "Event created successfully": "تم إنشاء الحدث بنجاح",
+  "Story Date": "تاريخ القصة",
+  "Pick Story date": "اختر تاريخ القصة",
+  "Event Image": "صورة الحدث",
+  "Event deleted successfully": "تم حذف الحدث بنجاح",
+  "Back to Dashboard": "العودة إلى لوحة التحكم",
+  "Search Historical Events": "البحث في الأحداث التاريخية",
+  "Image": "صورة",
+  "Name is required": "الاسم مطلوب",
+  "Position is required": "المنصب مطلوب",
+  "Job title is required": "المسمى الوظيفي مطلوب",
+  "Avatar is required": "الصورة الرمزية مطلوبة",
+  "Member updated successfully": "تم تحديث العضو بنجاح",
+  "Member created successfully": "تم إنشاء العضو بنجاح",
+  "Name": "الاسم",
+  "Enter full name": "أدخل الاسم الكامل",
+  "Select Position": "اختر المنصب",
+  "Search positions...": "ابحث عن المناصب...",
+  "No categories found": "لم يتم العثور على فئات",
+  "Job Title": "المسمى الوظيفي",
+  "Developer, Manager, etc": "مطور، مدير، إلخ",
+  "Enter a brief description or bio": "أدخل وصفًا موجزًا أو سيرة ذاتية",
+  "Avatar": "الصورة الرمزية",
+  "Enter image URL as alternative to file upload": "أدخل عنوان URL للصورة كبديل لتحميل الملف",
+  "platform": "منصة",
+  "Member deleted successfully": "تم حذف العضو بنجاح",
+  "Work Team": "فريق العمل",
+  "Manage team members and their data": "إدارة أعضاء الفريق وبياناتهم",
+  "members": "أعضاء",
+  "Search Team Members": "البحث عن أعضاء الفريق",
+  "Failed to load positions": "فشل تحميل المناصب",
+  "Position updated": "تم تحديث المنصب",
+  "Position created": "تم إنشاء المنصب",
+  "Operation failed": "فشلت العملية",
+  "Position deleted": "تم حذف المنصب",
+  "Delete failed": "فشل الحذف",
+  "Positions": "المناصب",
+  "Positions Management": "إدارة المناصب",
+  "Manage team positions and roles": "إدارة مناصب وأدوار الفريق",
+  "positions": "مناصب",
+  "Add Position": "إضافة منصب",
+  "Search Positions": "البحث في المناصب",
+  "No positions found": "لم يتم العثور على مناصب",
+  "Edit Position": "تعديل المنصب",
+  "Delete Position": "حذف المنصب",
+  "Are you sure you want to delete this position? This action cannot be undone.": "هل أنت متأكد أنك تريد حذف هذا المنصب؟ لا يمكن التراجع عن هذا الإجراء.",
+  "Card deleted successfully": "تم حذف البطاقة بنجاح",
+  "Card updated successfully": "تم تحديث البطاقة بنجاح",
+  "Card created successfully": "تم إنشاء البطاقة بنجاح",
+  "Select a theme": "اختر سمة",
+  "Select a language": "اختر لغة",
+  "Kind": "نوع",
+  "Select a Type": "اختر نوعًا",
+  "Max size: 5MB. Supported formats: JPG, PNG, GIF, WebP": "الحجم الأقصى: 5 ميجابايت. التنسيقات المدعومة: JPG, PNG, GIF, WebP",
+  "Main Image URL": "عنوان URL للصورة الرئيسية",
+  "Alternative to file upload": "بديل لتحميل الملف",
+  "Cover Image URL": "عنوان URL لصورة الغلاف",
+  "Enter cover image URL as alternative to file upload": "أدخل عنوان URL لصورة الغلاف كبديل لتحميل الملف",
+  "Optional": "اختياري",
+  "Additional metadata in JSON format (optional)": "بيانات وصفية إضافية بتنسيق JSON (اختياري)",
+  "Example: {\"tags\": [\"featured\", \"popular\"], \"priority\": 1}": "مثال: {\"tags\": [\"featured\", \"popular\"], \"priority\": 1}",
+  "Please select a valid image file": "الرجاء تحديد ملف صورة صالح",
+  "Report type is required": "نوع التقرير مطلوب",
+  "Country is required": "الدولة مطلوبة",
+  "Happened At is required": "تاريخ الحدوث مطلوب",
+  "Section is required": "القسم مطلوب",
+  "Summary is required": "الملخص مطلوب",
+  "Event updated successfully": "تم تحديث الحدث بنجاح",
+  "Back to Events List": "العودة إلى قائمة الأحداث",
+  "Edit Event": "تعديل الحدث",
+  "Create New Event": "إنشاء حدث جديد",
+  "You can either upload a file above or provide a URL here": "يمكنك إما تحميل ملف أعلاه أو توفير عنوان URL هنا",
+  "Search categories...": "ابحث في الفئات...",
+  "Search writers...": "ابحث عن كُتاب...",
+  "No writers found": "لم يتم العثور على كُتاب",
+  "Enter report title": "أدخل عنوان التقرير",
+  "Report Type": "نوع التقرير",
+  "Video": "فيديو",
+  "Section": "قسم",
+  "Select Section": "اختر القسم",
+  "Search sections...": "ابحث في الأقسام...",
+  "No sections found": "لم يتم العثور على أقسام",
+  "Select Country": "اختر الدولة",
+  "Duration (Minutes)": "المدة (بالدقائق)",
+  "Enter duration in minutes": "أدخل المدة بالدقائق",
+  "Happened At": "حدث في",
+  "Summary": "ملخص",
+  "Enter report summary": "أدخل ملخص التقرير",
+  "Failed to load categories": "فشل تحميل الفئات",
+  "Category updated": "تم تحديث الفئة",
+  "Category created": "تم إنشاء الفئة",
+  "Category deleted": "تم حذف الفئة",
+  "Go to Events List": "اذهب إلى قائمة الأحداث",
+  "Events Categories": "فئات الأحداث",
+  "Manage events categories and classifications": "إدارة فئات وتصنيفات الأحداث",
+  "categories": "فئات",
+  "Add Category": "إضافة فئة",
+  "Search Categories": "البحث في الفئات",
+  "Edit Category": "تعديل الفئة",
+  "Delete Category": "حذف الفئة",
+  "Are you sure you want to delete this category? This action cannot be undone.": "هل أنت متأكد أنك تريد حذف هذه الفئة؟ لا يمكن التراجع عن هذا الإجراء.",
+  "Events": "الأحداث",
+  "Search Events...": "ابحث في الأحداث...",
+  "Loading Event...": "جاري تحميل الحدث...",
+  "No Event found matching your search.": "لم يتم العثور على حدث يطابق بحثك.",
+  "No Event available.": "لا توجد أحداث متاحة.",
+  "Failed to load sections": "فشل تحميل الأقسام",
+  "Section updated": "تم تحديث القسم",
+  "Section created": "تم إنشاء القسم",
+  "Section deleted": "تم حذف القسم",
+  "Events Sections": "أقسام الأحداث",
+  "Manage events sections and classifications": "إدارة أقسام وتصنيفات الأحداث",
+  "sections": "أقسام",
+  "Add Section": "إضافة قسم",
+  "Search Sections": "البحث في الأقسام",
+  "Edit Section": "تعديل القسم",
+  "Delete Section": "حذف القسم",
+  "Are you sure you want to delete this section? This action cannot be undone.": "هل أنت متأكد أنك تريد حذف هذا القسم؟ لا يمكن التراجع عن هذا الإجراء.",
+  "Body content is required": "محتوى النص مطلوب",
+  "Status is required": "الحالة مطلوبة",
+  "Read time is required": "وقت القراءة مطلوب",
+  "Tags are required": "العلامات مطلوبة",
+  "Please fix the errors in the form": "الرجاء إصلاح الأخطاء في النموذج",
+  "Back to Posts List": "العودة إلى قائمة المنشورات",
+  "Post Image": "صورة المنشور",
+  "Select Status": "اختر الحالة",
+  "Enter Read Time in minutes": "أدخل وقت القراءة بالدقائق",
+  "Camera Model": "طراز الكاميرا",
+  "Enter camera model": "أدخل طراز الكاميرا",
+  "Camera Man": "المصور",
+  "Body Content": "محتوى النص",
+  "Enter the full content of the post": "أدخل المحتوى الكامل للمنشور",
+  "This is the main content that will be displayed to readers": "هذا هو المحتوى الرئيسي الذي سيتم عرضه للقراء",
+  "Enter metadata (JSON format)": "أدخل البيانات الوصفية (تنسيق JSON)",
+  "Optional metadata in JSON format": "بيانات وصفية اختيارية بتنسيق JSON",
+  "Go to Posts List": "اذهب إلى قائمة المنشورات",
+  "Posts Categories": "فئات المنشورات",
+  "Manage posts categories and classifications": "إدارة فئات وتصنيفات المنشورات",
+  "Search posts...": "ابحث في المنشورات...",
+  "No posts found matching your search": "لم يتم العثور على منشورات تطابق بحثك",
+  "No posts available": "لا توجد منشورات متاحة",
+  "Not published yet": "لم يُنشر بعد",
+  "Draft": "مسودة",
+  "Archived": "مؤرشف",
+  "Unknown Writer": "كاتب غير معروف",
+  "Content Preview": "معاينة المحتوى",
+  "Post Statistics": "إحصائيات المنشور",
+  "Yes": "نعم",
+  "No": "لا",
+  "Post Information": "معلومات المنشور",
+  "Uncategorized": "غير مصنف",
+  "Unknown": "غير معروف",
+  "Content Length": "طول المحتوى",
+  "characters": "أحرف",
+  "No content": "لا يوجد محتوى",
+  "Air date is required": "تاريخ البث مطلوب",
+  "TV Program updated successfully": "تم تحديث البرنامج التلفزيوني بنجاح",
+  "TV Program created successfully": "تم إنشاء البرنامج التلفزيوني بنجاح",
+  "Back to Video List": "العودة إلى قائمة الفيديو",
+  "Edit News": "تعديل الأخبار",
+  "Create New News": "إنشاء خبر جديد",
+  "Air Date": "تاريخ البث",
+  "Live Program": "برنامج مباشر",
+  "Go to News List": "اذهب إلى قائمة الأخبار",
+  "News Categories": "فئات الأخبار",
+  "Manage news categories and classifications": "إدارة فئات وتصنيفات الأخبار",
+  "Thumbnail is required": "الصورة المصغرة مطلوبة",
+  "Season is required": "الموسم مطلوب",
+  "Cast is required": "طاقم العمل مطلوب",
+  "Back to Videos List": "العودة إلى قائمة الفيديوهات",
+  "Thumbnail URL": "عنوان URL للصورة المصغرة",
+  "Enter thumbnail URL as alternative to file upload": "أدخل عنوان URL للصورة المصغرة كبديل لتحميل الملف",
+  "Season": "الموسم",
+  "Enter season number or name": "أدخل رقم الموسم أو اسمه",
+  "Casts": "طاقم العمل",
+  "Type a cast member name and press Enter": "اكتب اسم عضو من طاقم العمل واضغط Enter",
+  "Enter video description": "أدخل وصف الفيديو",
+  "Video Information": "معلومات الفيديو",
+  "Video Type": "نوع الفيديو",
+  "Published Date": "تاريخ النشر",
+  "Type & Links": "النوع والروابط",
+  "Standard Video": "فيديو قياسي",
+  "Watch Video": "شاهد الفيديو",
+  "Go to Videos List": "اذهب إلى قائمة الفيديوهات",
+  "Videos Categories": "فئات الفيديوهات",
+  "Manage videos categories and classifications": "إدارة فئات وتصنيفات الفيديوهات",
+  "Reference Code": "الرمز المرجعي",
+  "views": "مشاهدات",
+  "Normal": "عادي",
+  "Search by Writer...": "ابحث بالكاتب...",
+  "Profile updated successfully": "تم تحديث الملف الشخصي بنجاح",
+  "Publications": "المنشورات",
+  "Following": "متابَع",
+  "About me": "عني",
+  "Tell us about yourself...": "أخبرنا عن نفسك...",
+  "Full Name": "الاسم الكامل",
+  "Phone": "الهاتف",
+  "Website": "الموقع الإلكتروني",
+  "example: https://yourwebsite.com": "مثال: https://yourwebsite.com",
+  "Address": "العنوان",
+  "You have unsaved changes. Click 'Update Profile' to save them.": "لديك تغييرات غير محفوظة. انقر فوق 'تحديث الملف الشخصي' لحفظها.",
+  "Confirm password is required": "تأكيد كلمة المرور مطلوب",
+  "Updated Profile Successfully": "تم تحديث الملف الشخصي بنجاح",
+  "Profession": "المهنة",
+  "Address Details": "تفاصيل العنوان",
+  "Pick created date": "اختر تاريخ الإنشاء",
+  "Index Category": "فئة الفهرس",
+  "This Index Category": "فئة الفهرس هذه",
+  "writer": "كاتب",
+  "Card": "بطاقة",
+  "Load more": "تحميل المزيد",
+  "Ooops...": "عفوًا...",
+  "Sorry, the content you're looking for doesn't exist.": "عذرًا، المحتوى الذي تبحث عنه غير موجود.",
+  "Either it was removed, or you mistyped the link.": "إما أنه تمت إزالته، أو أنك أخطأت في كتابة الرابط."
 }
