feat: Enhance video and event pages with dynamic data fetching and improved UI components
- Updated VideoPageContent to fetch video data from API and display loading state.
- Refactored VideosPageContent to retrieve top viewed and user listed videos from API.
- Modified routing for GuidedReading and Events pages to align with new structure.
- Implemented a comprehensive filtering system for videos with enhanced API support.
- Introduced new components for event hero slider and category tags to improve user experience.
- Added loader and error handling for asynchronous data fetching in various components.
- Updated GuidedReadingPageContent to include new sections and improved layout.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -769,7 +769,35 @@
   "Camera Model": "طراز الكاميرا",
   "Camera Man": "المصور",
   "Enter camera model": "أدخل طراز الكاميرا",
-  "": "",
-  "": "",
+  "Search Videos...": "البحث عن الفيديوهات...",
+  "Pick Happened At date": "اختر تاريخ الحدث",
+  "Happened At is required": "حقل 'حدث في' مطلوب",
+  "This Index Category": "هذه الفئة من الفهرس",
+  "Search items, collections, and accounts": "البحث عن العناصر والمجموعات والحسابات",
+  "Categories": "الفئات",
+  "Happened Date": "تاريخ الحدث",
+  "Pick Happened Date": "اختر تاريخ الحدث",
+  "Search by writer...": "البحث عن الكاتب...",
+  "Two-Factor Authentication": "المصادقة الثنائية",
+  "resend Qr": "إعادة إرسال رمز الاستجابة السريعة",
+  "Resend Qr": "إعادة إرسال رمز الاستجابة السريعة",
+  "verify": "تحقق",
+  "Verify": "تحقق",
+  "Events": "الفعاليات",
+  "Incorrect Username Or Password": "اسم المستخدم أو كلمة المرور غير صحيحة",
+  "Position deleted": "تم حذف المنصب",
+  "Position created": "تم إنشاء المنصب",
+  "Position updated": "تم تحديث المنصب",
+  "members": "الأعضاء",
+  "Search positions...": "البحث عن المناصب...",
+  "Sections": "الأقسام",
+  "Add a comment...": "أضف تعليقًا...",
+  "Events List": "قائمة الفعاليات",
+  "Add/Edit Event": "إضافة/تعديل حدث",
+  "Events Categories": "فئات الفعاليات",
+  "Events Sections": "أقسام الفعاليات",
+  "Updated Profile Successfully": "تم تحديث الملف الشخصي بنجاح",
+  "Changes ready to save. Click 'Update Profile' to save all changes.": "التغييرات جاهزة للحفظ. انقر على 'تحديث الملف الشخصي' لحفظ جميع التغييرات.",
+  "Profile updated successfully": "تم تحديث الملف الشخصي بنجاح",
   "": ""
 }
